fix: улучшить метод validate в FilmService